--- a/test/fixtures/statuses.yml
+++ b/test/fixtures/statuses.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  user_id: praveen
+  user: praveen
   content: MyText
 
 two:
-  user_id: MyString
+  user: akhil
   content: MyText
